--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,48 @@
 * {
-  background-color: red;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100vw;
+  height: 100vh;
+}
+
+form {
+  border: 5px solid red;
+  display: flex;
+  flex-direction: column;
+  width: 50%;
+  height: 50%;
+  padding: 1rem;
+}
+
+.searchbar {
+  display: flex;
+  background-color: rgb(249, 248, 248);
+  border-radius: 3rem;
+  border: none;
+  padding: 1rem;
+  gap: 1rem;
+  align-items: center;
+  justify-content: flex-start;
+}
+
+.searchbar > input {
+  border: none;
+  background: none;
+  outline: none;
+}
+
+.hide {
+  display: none;
+}
+
+.show {
+  display: block;
 }
